--- a/friends.html
+++ b/friends.html
@@ -40,7 +40,6 @@
     <!-- user component -->
     <main class="friends-screen">
       <div class="user-component">
-        <!-- shortcut: .user-component__column*2 -->
         <div class="user-component__column">
           <img
             src="ykkim.jpeg"
@@ -102,7 +101,7 @@
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="more.html">
-            <span class="nav__updates"></span>
+            <span class="nav__updates badge--dot"></span>
             <i class="fa-solid fa-ellipsis fa-2x"></i>
           </a>
         </li>
