--- a/more.html
+++ b/more.html
@@ -29,13 +29,15 @@
         <span><i class="fa-solid fa-magnifying-glass fa-lg"></i></span>
         <span><i class="fa-solid fa-music fa-lg"></i></span>
         <span>
-          <span class="badge--dot-updates badge--dot"></span>
-          <i class="fa-solid fa-gear fa-lg"></i>
+          <a href="settings.html">
+            <span class="badge--dot-updates badge--dot"></span>
+            <i class="fa-solid fa-gear fa-lg"></i>
+          </a>
         </span>
       </div>
     </header>
 
-    <main class="main-screen">
+    <main class="main-screen more-screen">
       <div class="user-component">
         <div class="user-component__column">
           <img
@@ -56,20 +58,39 @@
 
       <div class="icon-row">
         <div class="icon-row__icon">
-          <i class="fa-solid fa-qrcode"></i>
+          <i class="fa-regular fa-calendar-check"></i>
           <span>Calendar</span>
         </div>
         <div class="icon-row__icon">
-          <i class="fa-regular fa-address-book"></i>
-          <span>Talk Drive</span>
-        </div>
-        <div class="icon-row__icon">
-          <i class="fa-solid fa-fingerprint"></i>
+          <i class="fa-regular fa-face-smile"></i>
           <span>Emoticons</span>
         </div>
         <div class="icon-row__icon">
-          <i class="fa-regular fa-envelope"></i>
+          <i class="fa-solid fa-brush"></i>
           <span>Themes</span>
+        </div>
+        <div class="icon-row__icon">
+          <i class="fa-regular fa-credit-card"></i>
+          <span>Account</span>
+        </div>
+      </div>
+
+      <div class="more-suggestions">
+        <h4 class="more-suggestions__title">Suggestions</h4>
+        <div class="more-suggestions__icons">
+          <div class="more-suggestions__icon">
+            <div class="more-suggestions__icon-image">
+              <i class="fa-solid fa-quote-right"></i>
+            </div>
+            <span class="more-suggestions__icon-text">Kokoa Story</span>
+          </div>
+
+          <div class="more-suggestions__icon">
+            <div class="more-suggestions__icon-image">
+              <i class="fa-solid fa-quote-right"></i>
+            </div>
+            <span class="more-suggestions__icon-text">Kokoa friends</span>
+          </div>
         </div>
       </div>
     </main>
