--- a/chat.html
+++ b/chat.html
@@ -36,7 +36,41 @@
       </div>
     </header>
 
-    <main class="main-screen"></main>
+    <main class="main-screen main-chat">
+      <div class="chat__timestamp">Monday, August 15, 2022</div>
+
+      <div class="message-row">
+        <img src="ykkim.jpeg" />
+        <div class="message-row__content">
+          <span class="message__author">Sieun</span>
+          <div class="message__info">
+            <span class="message__bubble">Hi!</span>
+            <span class="message__time">21:15</span>
+          </div>
+        </div>
+      </div>
+
+      <div class="message-row message-row--own">
+        <div class="message-row__content">
+          <div class="message__info">
+            <span class="message__bubble">Hi! Nice to meet you!</span>
+            <span class="message__time">21:15</span>
+          </div>
+        </div>
+      </div>
+    </main>
+
+    <form class="reply">
+      <div class="reply__column">
+        <i class="fa-regular fa-square-plus fa-xl"></i>
+      </div>
+
+      <div class="reply__column">
+        <input type="text" placeholder="Write a message" />
+        <i class="fa-regular fa-face-smile fa-lg"></i>
+        <button><i class="fa-solid fa-arrow-up"></i></button>
+      </div>
+    </form>
 
     <script
       src="https://kit.fontawesome.com/c7ee593661.js"
