--- a/chat.html
+++ b/chat.html
@@ -39,22 +39,22 @@
     <main class="main-screen main-chat">
       <div class="chat__timestamp">Monday, August 15, 2022</div>
 
+      <div class="message-row message-row--own">
+        <div class="message-row__content">
+          <div class="message__info">
+            <span class="message__bubble">Hi! Nice to meet you!</span>
+            <span class="message__time">21:15</span>
+          </div>
+        </div>
+      </div>
+
       <div class="message-row">
         <img src="ykkim.jpeg" />
         <div class="message-row__content">
           <span class="message__author">Sieun</span>
           <div class="message__info">
             <span class="message__bubble">Hi!</span>
-            <span class="message__time">21:15</span>
-          </div>
-        </div>
-      </div>
-
-      <div class="message-row message-row--own">
-        <div class="message-row__content">
-          <div class="message__info">
-            <span class="message__bubble">Hi! Nice to meet you!</span>
-            <span class="message__time">21:15</span>
+            <span class="message__time">21:22</span>
           </div>
         </div>
       </div>
@@ -71,6 +71,10 @@
         <button><i class="fa-solid fa-arrow-up"></i></button>
       </div>
     </form>
+
+    <div id="no-mobile">
+      <span>Your screen is too big :(</span>
+    </div>
 
     <script
       src="https://kit.fontawesome.com/c7ee593661.js"
