--- a/find.html
+++ b/find.html
@@ -137,6 +137,10 @@
       </ul>
     </nav>
 
+    <div id="no-mobile">
+      <span>Your screen is too big :(</span>
+    </div>
+
     <script
       src="https://kit.fontawesome.com/c7ee593661.js"
       crossorigin="anonymous"
