--- a/friends.html
+++ b/friends.html
@@ -108,6 +108,14 @@
       </ul>
     </nav>
 
+    <div id="splash-screen">
+      <i class="fa-solid fa-comment"></i>
+    </div>
+
+    <div id="no-mobile">
+      <span>Your screen is too big :(</span>
+    </div>
+
     <script
       src="https://kit.fontawesome.com/c7ee593661.js"
       crossorigin="anonymous"
