--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
       <a href="#">Find Kokoa Account or Password</a>
     </form>
 
+    <div id="no-mobile">
+      <span>Your screen is too big :(</span>
+    </div>
+
     <script
       src="https://kit.fontawesome.com/c7ee593661.js"
       crossorigin="anonymous"
