--- a/chats.html
+++ b/chats.html
@@ -38,14 +38,12 @@
         <div class="user-component">
           <div class="user-component__column">
             <img
-              src="ykkim.jpeg"
+              src="hipass.png"
               class="user-component__avatar user-component__avatar"
             />
             <div class="user-component__text">
-              <h4 class="user-component__title">Sieun</h4>
-              <h6 class="user-component__subtitle">
-                Please check My Kokoa Account Info
-              </h6>
+              <h4 class="user-component__title">HI-PASS</h4>
+              <h6 class="user-component__subtitle">08.16.Tue, 15:30 :)</h6>
             </div>
           </div>
           <div class="user-component__column">
@@ -58,14 +56,12 @@
       <div class="user-component">
         <div class="user-component__column">
           <img
-            src="ykkim.jpeg"
+            src="https://www.pinkspiders.co.kr/images/sub/img_ci01.jpg"
             class="user-component__avatar user-component__avatar"
           />
           <div class="user-component__text">
-            <h4 class="user-component__title">Sieun</h4>
-            <h6 class="user-component__subtitle">
-              Please check My Kokoa Account Info
-            </h6>
+            <h4 class="user-component__title">PINKSPIDERS</h4>
+            <h6 class="user-component__subtitle">VS GS Caltex</h6>
           </div>
         </div>
         <div class="user-component__column">
