--- a/find.html
+++ b/find.html
@@ -71,17 +71,21 @@
             <h5 class="open-post__title">#KYK</h5>
             <h6 class="open-post__hashtags">#kyk#jamjam#sikbbang</h6>
             <div class="open-post__members">
-              <img src="ykkim.jpeg" />
-              <span class="open-post__members-count">802 members</span>
+              <img
+                src="https://www.pinkspiders.co.kr/images/sub/img_ci01.jpg"
+              />
+              <span class="open-post__members-count">88, 226 members</span>
               <div class="divider"></div>
               <span class="open-post__members-status">Active</span>
             </div>
           </div>
           <div class="open-post__column">
             <div class="open-post__photo">
-              <img src="ykkim.jpeg" />
+              <img
+                src="https://www.pinkspiders.co.kr/function/image_stream.php?path=player&filename=62c3e4e573436_1657005285.png"
+              />
               <div class="open-post__heart-count">
-                <i class="fa-solid fa-heart fa-xs"></i><span>326</span>
+                <i class="fa-solid fa-heart fa-xs"></i><span>192</span>
               </div>
             </div>
           </div>
@@ -89,20 +93,24 @@
 
         <div class="open-post">
           <div class="open-post__column">
-            <h5 class="open-post__title">#KYK</h5>
-            <h6 class="open-post__hashtags">#kyk#jamjam#sikbbang</h6>
+            <h5 class="open-post__title">#KHJ</h5>
+            <h6 class="open-post__hashtags">#khj#jujupdan#geurujam</h6>
             <div class="open-post__members">
-              <img src="ykkim.jpeg" />
-              <span class="open-post__members-count">802 members</span>
+              <img
+                src="https://upload.wikimedia.org/wikipedia/en/thumb/d/de/Hwaseong_IBK_Altos.svg/1200px-Hwaseong_IBK_Altos.svg.png"
+              />
+              <span class="open-post__members-count">91,429 members</span>
               <div class="divider"></div>
               <span class="open-post__members-status">Active</span>
             </div>
           </div>
           <div class="open-post__column">
             <div class="open-post__photo">
-              <img src="ykkim.jpeg" />
+              <img
+                src="https://blog.kakaocdn.net/dn/bjfDIs/btrboseld01/NjHnxYYwnlGic2JUHISYN0/img.png"
+              />
               <div class="open-post__heart-count">
-                <i class="fa-solid fa-heart fa-xs"></i><span>326</span>
+                <i class="fa-solid fa-heart fa-xs"></i><span>185</span>
               </div>
             </div>
           </div>
