--- a/more.html
+++ b/more.html
@@ -87,7 +87,7 @@
 
           <div class="more-suggestions__icon">
             <div class="more-suggestions__icon-image">
-              <i class="fa-solid fa-quote-right"></i>
+              <i class="fa-solid fa-paw"></i>
             </div>
             <span class="more-suggestions__icon-text">Kokoa friends</span>
           </div>
