--- a/chat.html
+++ b/chat.html
@@ -28,7 +28,7 @@
         <a href="chats.html"> <i class="fa-solid fa-chevron-left fa-xl"></i></a>
       </div>
       <div class="alt-header__column">
-        <h1 class="alt-header__title">Sieun</h1>
+        <h1 class="alt-header__title">HI-PASS</h1>
       </div>
       <div class="alt-header__column">
         <span><i class="fa-solid fa-magnifying-glass fa-xl"></i></span>
@@ -42,18 +42,18 @@
       <div class="message-row message-row--own">
         <div class="message-row__content">
           <div class="message__info">
-            <span class="message__bubble">Hi! Nice to meet you!</span>
-            <span class="message__time">21:15</span>
+            <span class="message__bubble">Game Schedule ?</span>
+            <span class="message__time">21:22</span>
           </div>
         </div>
       </div>
 
       <div class="message-row">
-        <img src="ykkim.jpeg" />
+        <img src="hipass.png" />
         <div class="message-row__content">
-          <span class="message__author">Sieun</span>
+          <span class="message__author">HI-PASS</span>
           <div class="message__info">
-            <span class="message__bubble">Hi!</span>
+            <span class="message__bubble">08.16.Tue, 15:30 :)</span>
             <span class="message__time">21:22</span>
           </div>
         </div>
