--- a/friends.html
+++ b/friends.html
@@ -46,7 +46,7 @@
             class="user-component__avatar user-component__avatar--xl"
           />
           <div class="user-component__text">
-            <h4 class="user-component__title">Sieun</h4>
+            <h4 class="user-component__title">Kim Sieun</h4>
             <!-- <h6 class="user-component__subtitle">This is subtitle</h6> -->
           </div>
         </div>
@@ -61,7 +61,7 @@
         <div class="user-component">
           <div class="user-component__column">
             <img
-              src="ykkim.jpeg"
+              src="KOVO.png"
               class="user-component__avatar user-component__avatar--sm"
             />
             <div class="user-component__text">
@@ -72,7 +72,7 @@
           </div>
           <div class="user-component__column">
             <div>
-              <span>2</span>
+              <span>7</span>
               <i class="fa-solid fa-chevron-right"></i>
             </div>
           </div>
