--- a/chats.html
+++ b/chats.html
@@ -99,7 +99,7 @@
     </nav>
 
     <div id="no-mobile">
-      <span>Your screen is too big :(</span>
+      <span>Your screen is too big 😭</span>
     </div>
 
     <script
